syntax = "proto3";
package slots;

option go_package = "github.com/snple/beacon/pb/slots;slots";

import "node_message.proto";
import "generic_message.proto";

service NodeService {
    rpc Update(pb.Node) returns (pb.Node) {}
    rpc View(pb.MyEmpty) returns (pb.Node) {}
}
